@@ -142,6 +142,10 @@ lib/SPVM/Net/SSLeay/OPENSSL.c
 lib/SPVM/Net/SSLeay/OPENSSL.config
 lib/SPVM/Net/SSLeay/OPENSSL.pm
 lib/SPVM/Net/SSLeay/OPENSSL.spvm
+lib/SPVM/Net/SSLeay/OPENSSL_INIT.c
+lib/SPVM/Net/SSLeay/OPENSSL_INIT.config
+lib/SPVM/Net/SSLeay/OPENSSL_INIT.pm
+lib/SPVM/Net/SSLeay/OPENSSL_INIT.spvm
 lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.c
 lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.config
 lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.pm
